Fix spacing in bulleted lists

--- a/static/css/template.css
+++ b/static/css/template.css
@@ -191,9 +191,6 @@ ol ol,
 ol ul {
 	margin-bottom: 0;
 }
-li {
-	line-height: 18px;
-}
 dl {
 	margin-bottom: 18px;
 }
